# chirality-piping

./: .gitignore  CHIRALITY_FRAMEWORK.md  CONTRIBUTING.md  INIT.md  PROFESSIONAL_ENGINEERING.md  README.md  package-lock.json  package.json
.archive/: INTENT.md  SOFTWARE_DECOMP.md  open_piping_stress_prd.md
agents/: AGENT_AGGREGATION.md  AGENT_AUDIT_AGENTS.md  AGENT_AUDIT_DECOMP.md  AGENT_AUDIT_DEP_CLOSURE.md  AGENT_AUDIT_EPISTEMIC.md  AGENT_AUDIT_GOVERNANCE.md  AGENT_AUDIT_HYPERGRAPH_CLOSURE.md  AGENT_AUDIT_SCOPE_CLOSURE.md  AGENT_CHANGE.md  AGENT_DBM_PUBLISHER.md  AGENT_DECOMP_BASE.md  AGENT_DELIVERABLE_TASK.md  AGENT_DOMAIN_DECOMP.md  AGENT_DOMAIN_HYPERGRAPH.md  AGENT_DRAWING_EXTRACT.md  AGENT_EVALUATION.md  AGENT_EVALUATION_DEPENDENCY_AUDIT.md  AGENT_EVALUATION_REPORT.md  AGENT_EVALUATION_STRUCTURE_AUDIT.md  AGENT_HELPS_HUMANS.md  AGENT_HELP_HUMAN.md  AGENT_ORCHESTRATOR.md  AGENT_PDF2MD.md  AGENT_PREPARATION.md  AGENT_PROJECT_DECOMP.md  AGENT_RECONCILIATION.md  AGENT_REVIEW.md  AGENT_SCHEDULING.md  AGENT_SCOPE_CHANGE.md  AGENT_SCOPE_CHANGE.v2.1.diff.patch  AGENT_SKILLMAKER.md  AGENT_SOFTWARE_DECOMP.md  AGENT_TASK.md  AGENT_TOOLMAKER.md  AGENT_WORKING_ITEMS.md
api/: api_boundary_contract.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
core/loads/primitive_loads/: Cargo.toml  README.md
core/loads/primitive_loads/src/: lib.rs
core/loads/user_loads/: Cargo.toml  README.md
core/loads/user_loads/src/: lib.rs
core/product_physics/: Cargo.toml
core/product_physics/examples/: preview_result.rs
core/product_physics/src/: lib.rs  validation.rs
core/runner/headless/: Cargo.toml
core/runner/headless/src/: lib.rs
core/solver/nonlinear_supports/: Cargo.toml  README.md
core/solver/nonlinear_supports/src/: lib.rs
core/solver/performance_harness/: Cargo.toml  README.md
core/solver/performance_harness/src/: lib.rs
docs/: AGENTIC_DEVELOPMENT_WORKFLOW.md  AGENTS.md  BUILD_AND_RELEASE.md  CONTRACT.md  DIRECTIVE.md  IP_AND_DATA_BOUNDARY.md  MANIFEST.json  PROFESSIONAL_BOUNDARY.md  README.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_QUALITY_GATES.md  SPEC.md  TYPES.md  VALIDATION_STRATEGY.md  report_notice_template.md
execution/: PKG00_PREPARATION_DELTA_SUMMARY.md  PREPARATION_RUN_SUMMARY.md
governance/: CONTRIBUTION_REVIEW_CHECKLIST.md  CONTRIBUTOR_CERTIFICATION_TEMPLATE.md  MAINTAINERS.md
init/: Claude_session_IDs.md  NEXT_SESSION_PROMPT.md  codex_session_IDs.md
open_pipe_stress_decomp_review_pass/: MANIFEST.json  SOFTWARE_DECOMP_REVIEW_PASS.md
plans/: DAG-001_EXECUTION_DEPENDENCY_GRAPH_PLAN.md  DEV-001_PRODUCT_DEVELOPMENT_DISPATCH_PLAN.md  SCA-001_DOWNSTREAM_FOUR_DOC_REFRESH_PLAN.md  SCA-002_DOWNSTREAM_REFRESH_PLAN.md  TP-MAC-02_PHYSICS_FIRST_APPLICATION_PLAN.md  TP-MAC-03_RESULT_INTERPRETATION_AND_REVIEW_WORKFLOW_PLAN.md  TP-MAC-04_ENDPOINT_RESULT_CONSUMER_AND_END_J_RECOVERY_PLAN.md  TP-MAC-05_ENDPOINT_STRESS_COMPONENT_RESULTS_PLAN.md  TP-MAC-06_UNIFORM_THERMAL_AXIAL_PREVIEW_PLAN.md  TP-MAC-07_MIDSPAN_STATION_PREVIEW_PLAN.md  TP-MAC-08_CODE_NEUTRAL_LOAD_COMBINATION_PREVIEW_PLAN.md  TP-PER-01_PROJECT_PERSISTENCE_AND_RUN_HISTORY_PLAN.md  TP-RUN-01_PREVIEW_RUNTIME_SPINE_PLAN.md
schemas/: adapter_framework.schema.yaml  analysis_boundary.schema.yaml  analysis_run.schema.json  analysis_status.schema.yaml  comparison_mapping.schema.json  comparison_tolerance.schema.json  component.schema.yaml  constraint.schema.json  design_knowledge.schema.json  handoff_package.schema.json  headless_runner.schema.yaml  local_fea_handoff.schema.yaml  material.schema.yaml  model.schema.yaml  model_operation.schema.json  model_state.schema.json  plugin_manifest.schema.yaml  project_persistence.schema.yaml  redaction_export_controls.schema.yaml  report_generator.schema.yaml  report_protected_content_linter.schema.yaml  report_sections.schema.yaml  results.schema.yaml  rule_pack.schema.yaml  section.schema.yaml  units.schema.yaml  viewport_editor.schema.yaml
skills/: README.md  SKILL_TEMPLATE.md
tests/: test_accessibility_usability_baseline.py  test_adapter_framework_contract.py  test_agent_rationale_boundary.py  test_analysis_boundary_schema.py  test_analysis_run_comparison.py  test_analysis_run_records.py  test_analysis_run_schema.py  test_analysis_status_schema.py  test_api_boundary_contract.py  test_comparison_contracts.py  test_component_section_schema.py  test_constraint_schema.py  test_constraint_validation.py  test_design_authoring_comparison_workspace.py  test_design_knowledge_schema.py  test_external_prover_boundary_metadata.py  test_gui_editors_contract.py  test_handoff_export_workflow.py  test_handoff_package_schema.py  test_headless_runner_contract.py  test_material_schema.py  (+29 more)
validation/benchmarks/mechanics/: Cargo.toml  README.md
validation/benchmarks/mechanics/src/: lib.rs
validation/benchmarks/nonlinear/: Cargo.toml  README.md
validation/benchmarks/nonlinear/src/: lib.rs
validation/benchmarks/stress/: Cargo.toml  README.md
validation/benchmarks/stress/src/: lib.rs
(+2241 files in other folders)
