[package]
name = "open_pipe_stress_product_physics"
version = "0.1.0"
edition = "2021"
description = "Product-preview physics adapter for OpenPipeStress"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
open_pipe_stress_frame_kernel = { path = "../solver/frame_kernel" }
open_pipe_stress_load_case_algebra = { path = "../loads/load_case_algebra" }
open_pipe_stress_linear_supports = { path = "../solver/linear_supports" }
open_pipe_stress_primitive_loads = { path = "../loads/primitive_loads" }
open_pipe_stress_straight_pipe = { path = "../solver/straight_pipe" }
open_pipe_stress_stress_recovery = { path = "../loads/stress_recovery" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
