[package]
name = "openpipestress-desktop"
version = "0.1.0"
description = "OpenPipeStress macOS technical preview desktop shell"
authors = ["OpenPipeStress contributors"]
edition = "2021"

[lib]
name = "openpipestress_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open_pipe_stress_product_physics = { path = "../../../core/product_physics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
