[package]
name = "open_pipe_stress_solver_performance_harness"
version = "0.1.0"
edition = "2021"
description = "Deterministic sparse-solver performance and conditioning harness for OpenPipeStress"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
open_pipe_stress_frame_kernel = { path = "../frame_kernel" }
open_pipe_stress_solver_diagnostics = { path = "../diagnostics" }
