[package]
name = "open_pipe_stress_mechanics_benchmarks"
version = "0.1.0"
edition = "2021"
description = "Original mechanics verification benchmarks for OpenPipeStress"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
open_pipe_stress_frame_kernel = { path = "../../../core/solver/frame_kernel" }
open_pipe_stress_linear_supports = { path = "../../../core/solver/linear_supports" }
open_pipe_stress_primitive_loads = { path = "../../../core/loads/primitive_loads" }
open_pipe_stress_straight_pipe = { path = "../../../core/solver/straight_pipe" }
