[package]
name = "open_pipe_stress_nonlinear_benchmarks"
version = "0.1.0"
edition = "2021"
description = "Original nonlinear support regression benchmarks for OpenPipeStress"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
open_pipe_stress_linear_supports = { path = "../../../core/solver/linear_supports" }
open_pipe_stress_nonlinear_supports = { path = "../../../core/solver/nonlinear_supports" }
open_pipe_stress_solver_diagnostics = { path = "../../../core/solver/diagnostics" }
